Rajout description ,mots clés

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     
+	<title>Colin BEAL</title>
+	<meta name="description" content="Je m'appelle Colin BEAL, je suis actuellement étudiant en Terminale ES option mathématiques. Ceci est un site qui montre mes compétences.">
+	<meta name="keywords" content="BEAL, colin, etudiant, informatique, MMI, web, 3D" />
+	<meta name="author" content="BEAL colin ,etudiant ">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -27,7 +31,7 @@
         <div class="row">
      <div class="col-md-8">
         <p>Bonjour, je m'appelle colin Beal 
-        j'ai 17ans et ce site est la pour appuyer mon dossier d'inscription à la formation MMI , j'ai fait ce site pour montrer mes compétences et vous faire découvrir mon projet  </p>
+        j'ai 17ans et ce site est la pour appuyer mon dossier d'inscription à la formation MMI , j'ai fait ce site pour montrer mes compétences et vous faire découvrir mon projet.  </p>
         </div>
     </div> 
       </div>
