Ajout certif cambridge

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Colin BEAL</title>
 	<meta name="description" content="Je m'appelle Colin BEAL, je suis actuellement étudiant en Terminale ES option mathématiques. Ceci est un site qui montre mes compétences.">
 	<meta name="keywords" content="BEAL, colin, etudiant, informatique, MMI, web, 3D" />
-	<meta name="author" content="BEAL colin ,etudiant ">
+	<meta name="author" content="BEAL colin, Etudiant ">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     
@@ -84,7 +84,7 @@
 			<p>Certification Cambridge (niveau anglais B1)</p>
 	      </div>
 		  <div class="col-md-4">
-			<h3>T2</h3>
+			<h3>Image certification cambridge</h3>
 			<p>Test2</p>
 		  </div>
 		  <div class="col-md-4">
