Changement des accents

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 
   <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    
+    <meta charset="utf-8">
 	<title>Colin BEAL</title>
-	<meta name="description" content="Je m'appelle Colin BEAL, je suis actuellement étudiant en Terminale ES option mathématiques. Ceci est un site qui montre mes compétences.">
+	<meta name="description" content="Je m'appelle Colin BEAL, je suis actuellement Ã©tudiant en Terminale ES option mathÃ©matiques. Ceci est un site qui montre mes compÃ©tences.">
 	<meta name="keywords" content="BEAL, colin, etudiant, informatique, MMI, web, 3D" />
 	<meta name="author" content="BEAL colin, Etudiant ">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
@@ -31,7 +31,7 @@
         <div class="row">
      <div class="col-md-8">
         <p>Bonjour, je m'appelle colin Beal 
-        j'ai 17ans et ce site est la pour appuyer mon dossier d'inscription à la formation MMI , j'ai fait ce site pour montrer mes compétences et vous faire découvrir mon projet.  </p>
+        j'ai 17ans et ce site est la pour appuyer mon dossier d'inscription Ã  la formation MMI , j'ai fait ce site pour montrer mes compÃ©tences et vous faire dÃ©couvrir mon projet.  </p>
         </div>
     </div> 
       </div>
@@ -52,7 +52,7 @@
 
 </div>
   <div class="col-md-12">
-   <p> Ci dessus vous pouvez voir un des 84 modèles 3D de figurine du jeu vidéo League of Legends que j'ai importé sur la plateforme Sculpteo qui permet d'importer ces modèles 3d pour ensuite les imprimer en 3D .C'est sur ce site que j'ai ouvert le 6 octobre 2013 ma boutique où il était possible de se procuréer une figurine qui était ensuite imprimé et expédié par Sculpteo à l'acheteur.Mais n'ayant fait aucune démarche envers le propiétaire des droits d'auteurs j'ai été contraint d'arrêter cette expérience. Celle ci qui m'a appris à utiliser les réseaux sociaux pour faire connaitre ma boutique en ligne . Suite à cette première expérience avec le site Sculpteo et l'envie des joueurs de jeu en ligne en général d'avoir un peu de leur jeu vidéo chez eux à travers une figurine.J'ai aujourd'hui l'envie de créer un Site web qui regroupe comme je l'avais fais des modèles imprimables de personnage de jeu vidéo mais cette fois en ayant l'appui des Sociétés propriétaires des droits d'auteurs et surtout proposer un site web fiable et facile d'utilisation pour l'acheteur.
+   <p> Ci dessus vous pouvez voir un des 84 modÃ¨les 3D de figurine du jeu vidÃ©o League of Legends que j'ai importÃ© sur la plateforme Sculpteo qui permet d'importer ces modÃ¨les 3d pour ensuite les imprimer en 3D .C'est sur ce site que j'ai ouvert le 6 octobre 2013 ma boutique oÃ¹ il Ã©tait possible de se procurÃ©er une figurine qui Ã©tait ensuite imprimÃ© et expÃ©diÃ© par Sculpteo Ã  l'acheteur.Mais n'ayant fait aucune dÃ©marche envers le propiÃ©taire des droits d'auteurs j'ai Ã©tÃ© contraint d'arrÃªter cette expÃ©rience. Celle ci qui m'a appris a utiliser les rÃ©seaux sociaux pour faire connaitre ma boutique en ligne . Suite Ã  cette premiÃ¨re expÃ©rience avec le site Sculpteo et l'envie des joueurs de jeu en ligne en gÃ©nÃ©ral d'avoir un peu de leur jeu vidÃ©o chez eux Ã  travers une figurine.J'ai aujourd'hui l'envie de crÃ©er un Site web qui regroupe comme je l'avais fais des modÃ¨les imprimables de personnage de jeu vidÃ©o mais cette fois en ayant l'appui des SociÃ©tÃ©s propriÃ©taires des droits d'auteurs et surtout proposer un site web fiable et facile d'utilisation pour l'acheteur.
   </div>
      </div>
    </div>
@@ -63,7 +63,7 @@
 	   <div class="row">
 
 	      <div class="col-md-4">
-			<h3>Diplôme</h3>
+			<h3>DiplÃ´me</h3>
 			<p>Certification Cambridge (niveau anglais B1)</p>
 	      </div>
 		  <div class="col-md-4">
@@ -78,21 +78,4 @@
 	  </div>
 
   </body>
-</html>
-	      <div class="col-md-4">
-			<h3>Diplôme</h3>
-			<p>Certification Cambridge (niveau anglais B1)</p>
-	      </div>
-		  <div class="col-md-4">
-			<h3>Image certification cambridge</h3>
-			<p>Test2</p>
-		  </div>
-		  <div class="col-md-4">
-			<h3>t3!</h3>
-			<p>Test 3</p>
-		  </div>
-	    </div>
-	  </div>
-
-  </body>
-</html>
+  </html>
