--- a/index.html
+++ b/index.html
@@ -23,75 +23,7 @@
 </head>
 
 <body>
-    <div class="nav">
-        <div class="container">
-            <ul class="pull-right">
-                <h1>Colin Beal</h1>
-            </ul>
-        </div>
-    </div>
-
-    <div class="jumbotron">
-        <div class="container">
-            <p>Bienvenue sur mon site</p>
-            <div class="row">
-                <div class="col-md-8">
-                    <p>Bonjour, je m'appelle Colin BEAL, j'ai 17 ans et ce site est là pour appuyer mon dossier d'inscription à la formation MMI. J'ai réaliser ce site afin montrer mes compétences en modelisation 3D et vous faire découvrir mes projets.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="neighborhood-guides">
-        <div class="container">
-            <h2>Travaux et projet futur:</h2>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="thumbnail">
-                        <iframe width="640" height="480" src="https://sketchfab.com/models/6e732d23559745958ccdf2b5e62cd88b/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-
-                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                        <a href="https://sketchfab.com/models/6e732d23559745958ccdf2b5e62cd88b?utm_source=oembed&utm_medium=embed&utm_campaign=6e732d23559745958ccdf2b5e62cd88b" target="_blank" style="font-weight: bold; color: #1CAAD9;">Jarvan Lo L</a>
-                        by <a href="https://sketchfab.com/boblafriteuse?utm_source=oembed&utm_medium=embed&utm_campaign=6e732d23559745958ccdf2b5e62cd88b" target="_blank" style="font-weight: bold; color: #1CAAD9;">boblafriteuse</a>
-                        on <a href="https://sketchfab.com?utm_source=oembed&utm_medium=embed&utm_campaign=6e732d23559745958ccdf2b5e62cd88b" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                        </p>
-
-                    </div>
-                    <div class="col-md-12">
-                        <p>Ci dessus vous pouvez voir un des 84 modèlisation 3D de figurine du jeu vidéo League of Legends que j'ai importé sur la plateforme Sculpteo qui permet ensuite de les imprimer en 3D .C'est sur ce site que j'ai ouvert le 6 octobre 2013 ma boutique où il était possible de se procurer une figurine qui était ensuite imprimé et expédié par Sculpteo à l'acheteur.</p>
-                        <p>Mais n'ayant fait aucune démarche envers le propiétaire des droits d'auteurs j'ai été contraint d'arrêter cette expérience. Celle ci qui m'a appris a utiliser les réseaux sociaux pour faire connaitre ma boutique en ligne.</p>
-                        <p>C'est suite à cette première expérience avec le site Sculpteo et l'envie des joueurs en général d'avoir une part de leur jeu vidéo chez eux à travers une figurine que j'ai aujourd'hui l'envie de créer un site web qui regrouperais comme je l'avais fais des modèlisation imprimables de personnage de jeu vidéo mais cette fois en ayant l'appui des sociétés propriétaires des droits d'auteurs et en proposant un site web aux graphismes attrayants et facile d'utilisation pour l'acheteur et le vendeur.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="learn-more">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h2>Diplômes</h2>
-                    <p>Certification Cambridge (niveau anglais B1)</p>
-                </div>
-                <div class="col-md-4">
-                    <h2>Langues</h2>
-                    <p>Anglais</p>
-                    <p>Allemand</p>
-                </div>
-                <div class="col-md-4">
-                    <h2>Modelisation 3D</h2>
-                    <p>Blender</p>
-                    <p>Plateforme Sculpteo</p>
-                    <p>Plateforme SketchFab</p>
-                </div>
-                <div class="col-md-4">
-                    <h2>Graphisme</h2>
-                    <p>Gimp, PhotoFiltre pour la création de textures</p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <a href="https://colinbeal.github.io/GrosJeu/">LE JEU</a>
 
     </body>
 </html>
