--- a/Wahou/index.html
+++ b/Wahou/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Wahou!</title>
     <link rel= "stylesheet"  type= "text/css"  href=  "style.css"/>
+	<script type="text/javascript">
+    window.smartlook||(function(d) {
+    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+    c.charset='utf-8';c.src='//rec.smartlook.com/recorder.js';h.appendChild(c);
+    })(document);
+    smartlook('init', '8ec4feae6d23b989d96fd9ff3903a030e7869e3f');
+</script>
 </head>
 <body>
 
