--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="container main" id="accueil">
                     <div class="row">
                         <div class="col-md-3 hidden-xs hidden-sm ">
-                    <img src="images/3.jpg" alt="photo colin" class="img-responsive img" >
+                    <img src="images/photo.jpg" alt="photo colin" class="img-responsive img" >
                         </div>
                         <div class="col-md-6">
                             <span class="maintext">COLIN BEAL</span>
