--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <h2 id="aprop"> à propos </h2>
               <p>
                   Je m'appel Colin Beal, j'ai commencé le développement web et le web design pour développer un petit site perso et c'est rapidement devenu une vraie passion. J'aime expérimenter, découvrir et apprendre au fur et à mesure de mes projets pros et perso.
-                  Actuellement je suis en fin de deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet), et à la recherche d'un stage en tant que développeur web.
+                  Actuellement je suis en fin de deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet), et en stage de fin d'étude chez Michelin.
               </p>
           </div>
           <div class="container aprop">
@@ -165,15 +165,10 @@
 
 
           </div>
-                    <div class="container" id="cv">
+                    <div class="container" id="skills">
 
-                        <h2> CV </h2>
-                        <div class="row">
-                            <div class="col-md-5"> </div>
-                            <div class="col-md-4">
-                                 <a href="CV%20ColinBEAL.pdf" target="_blank" ><i class="fa fa-user-circle-o fa-2x fa-align-center cv" id="show">  Consulter mon CV</i></a>
-                            </div>
-                            </div>
+                        <h2> Mes compétences </h2>
+
                     </div>
           </div>
 
