--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                         <li><a href="#accueil">accueil</a></li>
                                         <li><a href="#aprop">à propos</a></li>
                                         <li><a href="#real">réalisations</a></li>
-                                        <li><a href="#cv">CV</a></li>
+                                        <li><a href="#skill">Mes compétences</a></li>
                                     </ul>
                                 </div>
                     </div>
