--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Site web de Colin BEAL</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Anton|Abel|Montserrat:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Anton|Abel" rel="stylesheet">
       <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 			<!-- Font awesome-->
@@ -51,16 +51,7 @@
 
 
       <div class="bgd">
-        <div class="row">
-          <div class="container-fluid">
-            <div class="col-md-2">
-              <h2 class="logo"> Colin.B </h2>
-            </div>
-          </div>
-        </div>
                 <div class="container main" id="accueil">
-
-                  <div class="container">
                     <div class="row">
                         <div class="col-md-3 hidden-xs hidden-sm ">
                     <img src="images/photo.png" alt="photo colin" class="img-responsive img" >
@@ -70,17 +61,47 @@
                                 </br>
                                 <span class="maintext2">19ans</span>
                                 </br>
-                                <span class="maintext4">Developpeur web  </span>
+                                <span class="maintext">Developpeur web  </span>
                                 </br>
                                 <span class="maintext3">HTML / CSS / Javascript / PHP / MySQL</span>
                                 </br>
                             <i class="fa fa-envelope-o fa-2x un" id="show"><span class="mail">  colinbealwork@gmail.com</span></i>
                             </br>
                             <a href="https://github.com/ColinBeal" target="_blank" ><i class="fa fa-github fa-2x un" id="show"></i></a>
-                        </div>
+
+
+
+
+                            </div>
+                        <div class=" navbar-fixed-top menu">
+                            <button class="hamburger hamburger--collapse pull-right" type="button" onclick='overlay()'>
+                             <span class="hamburger-box">
+                             <span class="hamburger-inner"></span>
+                            </span>
+                            </button>
+                        <script>
+                            // Look for .hamburger
+                            var hamburger = document.querySelector(".hamburger");
+                            // On click
+                            hamburger.addEventListener("click", function() {
+                                // Toggle class "is-active"
+                                hamburger.classList.toggle("is-active");
+                                // Do something else, like open/close menu
+                            });
+                        </script>
+                            <div id="overlay">
+                                <div class="liens">
+                                    <ul>
+                                        <li><a href="#accueil">accueil</a></li>
+                                        <li><a href="#aprop">à propos</a></li>
+                                        <li><a href="#real">réalisations</a></li>
+                                        <li><a href="#skill">Mes compétences</a></li>
+                                    </ul>
+                                </div>
                     </div>
                 </div>
-        </div>
+
+  </div>
           <div class="container aprop">
               <h2 id="aprop"> à propos </h2>
               <p>
@@ -90,23 +111,61 @@
           </div>
           <div class="container aprop">
               <h2 id="real"> Réalisations </h2>
-              <div class="row">
-                <div class="col-md-6">
-                  <p class="date">Projet Tutoré | Juin 2016</p>
+            <div class="row">
+              <div class="col-md-5 real">
+                  <div class="owl-carousel owl-theme">
+                      <div> <img src="images/4.jpg" class="img-responsive"> </div>
+                      <div> <img src="images/5.jpg" class="img-responsive"> </div>
+                      <div> <img src="images/6.jpg" class="img-responsive"> </div>
+                  </div>
                   <h3>Site web du 21ème congrès national d'apiculture</h3>
                   <hr/>
                   <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                  <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
-                </div>
-                <div class="col-md-6">
-                  <img src="images/4.jpg" class="img-responsive">
-                </div>
+                    <a class="button" href="http://www.congres-national-apiculture.com" target="_blank" ><i class="fa fa-location-arrow" id="show"></i></a>
+              </div>
+              <div class="col-md-2"></div>
+              <div class="col-md-5 real">
+                  <div class="owl-carousel owl-theme">
+                      <div> <img src="images/7.jpg" class="img-responsive"> </div>
+                      <div> <img src="images/8.jpg" class="img-responsive"> </div>
+                      <div> <img src="images/9.jpg" class="img-responsive"> </div>
+                  </div>
+                  <h3>Site web Espanolisimo</h3>
+                  <hr/>
+                  <p>Je travail sur ce site web depuis début novembre en binome, içi il est question de créer un site web convivial qui regroupe le travail des étudiants en espagnol, qui se présente le plus souvent sous forme de jeux. </p>
+                  <a class="button" href="http://www.espanolisimo.fr" target="_blank" ><i class="fa fa-location-arrow" id="show"></i></a>
+              </div>
+          </div>
+              </br>
+              <div class="row">
+                  <div class="col-md-5 real">
+
+                      <div class="owl-carousel owl-theme">
+                          <div> <img src="images/10.jpg" class="img-responsive"> </div>
+                          <div> <img src="images/11.jpg" class="img-responsive"> </div>
+                      </div>
+                      <h3>Application web pour le site des arts d'asie et d'afrique</h3>
+                      <hr/>
+                      <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. Ici j'ai repris les oeuvres exposer sous forme de puzzle intéractif pour rester dans l'esprit de l'exposition.</p>
+                      <a class="button" href="Puzzle/index.html" target="_blank" ><i class="fa fa-location-arrow" id="show"></i></a>
+                  </div>
+                  <div class="col-md-2"></div>
+                  <div class="col-md-5 real">
+
+                         <img src="images/12.jpg" class="img-responsive">
+
+                      <h3>Site web Wahou!</h3>
+                      <hr/>
+                      <p>Ce site est un projet personnel, il ma permis de faire mes premiers essais en javascript,il est aujourd'hui un peu obsolète mais il devrait évoluer sous peu. </p>
+                      <a class="button" href="Wahou/index.html" target="_blank" ><i class="fa fa-location-arrow" id="show"></i></a>
+                  </div>
               </div>
 
 
 
+
           </div>
-                    <div class="container aprop" id="skills">
+                    <div class="container" id="skills">
 
                         <h2> Mes compétences </h2>
 
