--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
             <div class="col-md-2">
               <h2 class="logo"> Colin.B </h2>
             </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-2">
+              <h2 class="link" > à propos </h2>
+            </div>
+            <div class="col-md-2">
+              <h2 class="link"> réalisations </h2>
+            </div>
+            <div class="col-md-2">
+              <h2 class="link"> Compétences </h2>
+            </div>
           </div>
         </div>
                 <div class="container main" id="accueil">
@@ -101,7 +114,36 @@
                 <div class="col-md-6">
                   <img src="images/4.jpg" class="img-responsive">
                 </div>
+
               </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="images/12.jpg" class="img-responsive">
+                </div>
+                <div class="col-md-6">
+                  <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
+                  <h3>Wahou!</h3>
+                  <hr/>
+                  <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
+                  <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
+                </div>
+
+
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <p class="date">Projet Etude | Décembre 2016</p>
+                  <h3>Application web pour le site des arts d'asie et d'afrique</h3>
+                  <hr/>
+                  <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. Ici j'ai repris les oeuvres exposer sous forme de puzzle intéractif pour rester dans l'esprit de l'exposition.</p>
+                  <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
+                </div>
+                <div class="col-md-6">
+                  <img src="images/10.jpg" class="img-responsive">
+                </div>
+
+              </div>
+
 
 
 
