--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <title>Site web de Colin BEAL</title>
 
@@ -53,21 +53,21 @@
       <div class="bgd">
         <div class="row">
           <div class="container-fluid">
-            <div class="col-md-2">
-              <h2 class="logo"> Colin.B </h2>
+            <div class="col-md-1">
+              <h2 class="logo"> CB. </h2>
+            </div>
+            <div class="col-md-3">
             </div>
             <div class="col-md-2">
             </div>
             <div class="col-md-2">
+              <h2 class="link" > à propos. </h2>
             </div>
             <div class="col-md-2">
-              <h2 class="link" > à propos </h2>
+              <a href="#real"><h2 class="link"> réalisations. </h2></a>
             </div>
             <div class="col-md-2">
-              <h2 class="link"> réalisations </h2>
-            </div>
-            <div class="col-md-2">
-              <h2 class="link"> Compétences </h2>
+              <a href="#skills"><h2 class="link"> Compétences. </h2></a>
             </div>
           </div>
         </div>
@@ -87,22 +87,25 @@
                                 </br>
                                 <span class="maintext3">HTML / CSS / Javascript / PHP / MySQL</span>
                                 </br>
+                            <i class="fa fa-map-marker fa-2x un" >  France</i>
+                            </br>
                             <i class="fa fa-envelope-o fa-2x un" id="show"><span class="mail">  colinbealwork@gmail.com</span></i>
                             </br>
                             <a href="https://github.com/ColinBeal" target="_blank" ><i class="fa fa-github fa-2x un" id="show"></i></a>
+
                         </div>
                     </div>
                 </div>
         </div>
           <div class="container aprop">
-              <h2 id="aprop"> à propos </h2>
+              <h2 id="aprop"> à propos. </h2>
               <p>
                   Je m'appel Colin Beal, j'ai commencé le développement web et le web design pour développer un petit site perso et c'est rapidement devenu une vraie passion. J'aime expérimenter, découvrir et apprendre au fur et à mesure de mes projets pros et perso.
                   Actuellement je suis en fin de deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet), et en stage de fin d'étude chez Michelin.
               </p>
           </div>
           <div class="container aprop">
-              <h2 id="real"> Réalisations </h2>
+              <h2 id="real"> Réalisations. </h2>
               <div class="row">
                 <div class="col-md-6">
                   <p class="date">Projet Tutoré | Juin 2016</p>
@@ -117,9 +120,7 @@
 
               </div>
               <div class="row">
-                <div class="col-md-6">
-                  <img src="images/12.jpg" class="img-responsive">
-                </div>
+
                 <div class="col-md-6">
                   <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
                   <h3>Wahou!</h3>
@@ -127,7 +128,9 @@
                   <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
                   <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
                 </div>
-
+                <div class="col-md-6">
+                  <img src="images/12.jpg" class="img-responsive">
+                </div>
 
               </div>
               <div class="row">
@@ -150,12 +153,14 @@
           </div>
                     <div class="container aprop" id="skills">
 
-                        <h2> Mes compétences </h2>
+                        <h2> Mes compétences. </h2>
 
                     </div>
           </div>
 
+          <footer>
 
+          </footer>
           <script src="js/jquery.js"></script>
           <script src="js/owl.carousel.min.js"></script>
           <script src="js/bootstrap.min.js"></script>
