--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row">
           <div class="container-fluid">
             <div class="col-md-1">
-              <h2 class="logo"> CB. </h2>
+              <h2 class="logo"> C. </h2>
             </div>
             <div class="col-md-3">
             </div>
@@ -75,13 +75,13 @@
 
                   <div class="container">
                     <div class="row">
-                        <div class="col-md-3 hidden-xs hidden-sm ">
+                        <div class="col-md-3  ">
                     <img src="images/photo.png" alt="photo colin" class="img-responsive img" >
                         </div>
                         <div class="col-md-6">
                             <span class="maintext">COLIN BEAL</span>
                                 </br>
-                                <span class="maintext2">19ans</span>
+                                <span class="maintext4">19ans</span>
                                 </br>
                                 <span class="maintext4">Developpeur web  </span>
                                 </br>
