--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Site web de Colin BEAL</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Anton|Abel|Montserrat:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700|Montserrat:900" rel="stylesheet">
       <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 			<!-- Font awesome-->
@@ -16,10 +16,6 @@
 			<!-- Ma feuille de style-->
 	<link href="css/style.css" rel="stylesheet">
 
-    <link href="css/hamburger.css" rel="stylesheet">
-
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
 			  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 			  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	  <!-- Hotjar Tracking Code for http://colinbeal.github.io/ -->
@@ -76,10 +72,10 @@
                   <div class="container">
                     <div class="row">
                         <div class="col-md-3  ">
-                    <img src="images/photo.png" alt="photo colin" class="img-responsive img" >
+                    <img src="images/photo.png" alt="photo colin" class="img-responsive" >
                         </div>
                         <div class="col-md-6">
-                            <span class="maintext">COLIN BEAL</span>
+                            <span class="maintext">COLIN. BEAL</span>
                                 </br>
                                 <span class="maintext4">19ans</span>
                                 </br>
@@ -87,11 +83,11 @@
                                 </br>
                                 <span class="maintext3">HTML / CSS / Javascript / PHP / MySQL</span>
                                 </br>
-                            <i class="fa fa-map-marker fa-2x un" >  France</i>
+                            <a href="https://fr.wikipedia.org/wiki/France" target="_blank"><i class="fa fa-map-marker fa-2x un" >  France</i></a>
                             </br>
-                            <i class="fa fa-envelope-o fa-2x un" id="show"><span class="mail">  colinbealwork@gmail.com</span></i>
+                            <i class="fa fa-envelope-o fa-2x un">  colinbealwork@gmail.com</i>
                             </br>
-                            <a href="https://github.com/ColinBeal" target="_blank" ><i class="fa fa-github fa-2x un" id="show"></i></a>
+                            <a href="https://github.com/ColinBeal" target="_blank" ><i class="fa fa-github fa-2x un">github.com/ColinBeal</i></a>
 
                         </div>
                     </div>
@@ -142,7 +138,7 @@
                   <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
                 </div>
                 <div class="col-md-6">
-                  <img src="images/10.jpg" class="img-responsive">
+                  <img src="images/11.jpg" class="img-responsive">
                 </div>
 
               </div>
