--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 
       <div class="bgd">
-        <div class="row">
+        <div class="row top">
           <div class="container-fluid">
             <div class="col-md-1">
-              <h2 class="logo"> C. </h2>
+              <img alt="icon" src="images/favicon.png" class="img-responsive ">
             </div>
             <div class="col-md-3">
             </div>
