--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Site web de Colin BEAL</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700|Montserrat:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700|Montserrat:900|Domine:400,700" rel="stylesheet">
       <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 			<!-- Font awesome-->
@@ -47,62 +47,74 @@
 
 
       <div class="bgd">
-        <div class="row top">
+        <div class="row top navbar-fixed-top">
           <div class="container-fluid">
             <div class="col-md-1">
-              <img alt="icon" src="images/favicon.png" class="img-responsive ">
+              <a href="#top"><h2 class="logo"> C.</h2></a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-5">
             </div>
-            <div class="col-md-2">
+
+            <div class="col-md-2 col-sm-hidden">
+              <a href="#real"><h2 class="link nav"> réalisations. </h2></a>
             </div>
-            <div class="col-md-2">
-              <h2 class="link" > à propos. </h2>
+            <div class="col-md-2 col-sm-hidden">
+              <a href="#skills"><h2 class="link nav"> Compétences. </h2></a>
             </div>
-            <div class="col-md-2">
-              <a href="#real"><h2 class="link"> réalisations. </h2></a>
+            <div class="col-md-2 col-sm-hidden">
+              <a href="#contact"><h2 class="link nav"> Infos. </h2></a>
             </div>
-            <div class="col-md-2">
-              <a href="#skills"><h2 class="link"> Compétences. </h2></a>
-            </div>
+
           </div>
         </div>
                 <div class="container main" id="accueil">
 
                   <div class="container">
-                    <div class="row">
-                        <div class="col-md-3  ">
-                    <img src="images/photo.png" alt="photo colin" class="img-responsive" >
-                        </div>
-                        <div class="col-md-6">
-                            <span class="maintext">COLIN. BEAL</span>
-                                </br>
-                                <span class="maintext4">19ans</span>
-                                </br>
-                                <span class="maintext4">Developpeur web  </span>
-                                </br>
-                                <span class="maintext3">HTML / CSS / Javascript / PHP / MySQL</span>
-                                </br>
-                            <a href="https://fr.wikipedia.org/wiki/France" target="_blank"><i class="fa fa-map-marker fa-2x un" >  France</i></a>
-                            </br>
-                            <i class="fa fa-envelope-o fa-2x un">  colinbealwork@gmail.com</i>
-                            </br>
-                            <a href="https://github.com/ColinBeal" target="_blank" ><i class="fa fa-github fa-2x un">github.com/ColinBeal</i></a>
 
-                        </div>
-                    </div>
                 </div>
         </div>
           <div class="container aprop">
-              <h2 id="aprop"> à propos. </h2>
-              <p>
-                  Je m'appel Colin Beal, j'ai commencé le développement web et le web design pour développer un petit site perso et c'est rapidement devenu une vraie passion. J'aime expérimenter, découvrir et apprendre au fur et à mesure de mes projets pros et perso.
-                  Actuellement je suis en fin de deuxième année de DUT MMI (Métiers du Multimédia et de l'Internet), et en stage de fin d'étude chez Michelin.
+
+              <div class="row">
+                <div class="col-md-3  ">
+            <img src="images/photo.png" alt="photo colin" class="img-responsive" >
+                </div>
+                <div class="col-md-9">
+                  <div class="row">
+                    <h2 id="aprop top" class="col-md-4"> bonjour. </h2>
+                    <br/>
+                  </div>
+  <br/>
+              <p class="maintext5">
+                  Je m'appel <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015 . Je suis actuellement en stage chez Michelin.
+                   <br/>
+                   <br/>
+                   Bonne visite<span class="blue">.</span>
               </p>
+            </div>
+
+            </div>
           </div>
           <div class="container aprop">
-              <h2 id="real"> Réalisations. </h2>
-              <div class="row">
+            <div class="row">
+              <h2 id="real" class="col-md-4">Réalisations. </h2>
+            </div>
+              <div class="row real">
+
+                <div class="col-md-6">
+                  <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
+                  <h3>Wahou!</h3>
+                  <hr/>
+                  <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
+                  <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
+                </div>
+                <div class="col-md-6">
+                  <img src="images/12.jpg" class="img-responsive">
+                </div>
+
+              </div>
+
+              <div class="row real">
                 <div class="col-md-6">
                   <p class="date">Projet Tutoré | Juin 2016</p>
                   <h3>Site web du 21ème congrès national d'apiculture</h3>
@@ -115,26 +127,12 @@
                 </div>
 
               </div>
-              <div class="row">
-
-                <div class="col-md-6">
-                  <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
-                  <h3>Wahou!</h3>
-                  <hr/>
-                  <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                  <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
-                </div>
-                <div class="col-md-6">
-                  <img src="images/12.jpg" class="img-responsive">
-                </div>
-
-              </div>
-              <div class="row">
+              <div class="row real">
                 <div class="col-md-6">
                   <p class="date">Projet Etude | Décembre 2016</p>
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
-                  <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. Ici j'ai repris les oeuvres exposer sous forme de puzzle intéractif pour rester dans l'esprit de l'exposition.</p>
+                  <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
                   <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
                 </div>
                 <div class="col-md-6">
@@ -149,10 +147,14 @@
           </div>
                     <div class="container aprop" id="skills">
 
-                        <h2> Mes compétences. </h2>
+                        <h2> Compétences. </h2>
 
                     </div>
-          </div>
+                    <div class="container aprop" id="skills">
+
+                        <h2> Infos. </h2>
+
+                    </div>
 
           <footer>
 
