--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
         <div class="row top navbar-fixed-top">
           <div class="container-fluid">
             <div class="col-md-1">
-              <a href="#top"><h2 class="logo"> C.</h2></a>
+              <a href="#top"><h2 class="logo"> C<span class="blue">.</span></h2></a>
             </div>
             <div class="col-md-5">
             </div>
 
             <div class="col-md-2 col-sm-hidden">
-              <a href="#real"><h2 class="link nav"> réalisations. </h2></a>
+              <a href="#real"><h2 class="link nav"> réalisations<span class="blue">.</span> </h2></a>
             </div>
             <div class="col-md-2 col-sm-hidden">
-              <a href="#skills"><h2 class="link nav"> Compétences. </h2></a>
+              <a href="#skills"><h2 class="link nav"> Compétences<span class="blue">.</span> </h2></a>
             </div>
             <div class="col-md-2 col-sm-hidden">
-              <a href="#contact"><h2 class="link nav"> Infos. </h2></a>
+              <a href="#contact"><h2 class="link nav"> Infos<span class="blue">.</span> </h2></a>
             </div>
 
           </div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-md-9">
                   <div class="row">
-                  
+
                     <br/>
                   </div>
   <br/>
@@ -97,7 +97,7 @@
           </div>
           <div class="container aprop">
             <div class="row">
-              <h2 id="real" class="col-md-4">Réalisations. </h2>
+              <h2 id="real" class="col-md-4">Réalisations<span class="blue">.</span> </h2>
             </div>
               <div class="row real">
 
@@ -106,7 +106,7 @@
                   <h3>Wahou!</h3>
                   <hr/>
                   <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                  <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
+                  <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
                 </div>
                 <div class="col-md-6">
                   <img src="images/12.jpg" class="img-responsive">
@@ -120,7 +120,7 @@
                   <h3>Site web du 21ème congrès national d'apiculture</h3>
                   <hr/>
                   <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                  <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
+                  <a href="congres.html" class="projectlink">En savoir plus <span class="blue">.</span>  </a>
                 </div>
                 <div class="col-md-6">
                   <img src="images/4.jpg" class="img-responsive">
@@ -133,7 +133,7 @@
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
                   <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
-                  <a href="congres.html" class="projectlink">En savoir plus   <i class="fa fa-angle-right"></i></a>
+                  <a href="congres.html" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
                 </div>
                 <div class="col-md-6">
                   <img src="images/11.jpg" class="img-responsive">
@@ -147,12 +147,12 @@
           </div>
                     <div class="container aprop" id="skills">
 
-                        <h2> Compétences. </h2>
+                        <h2> Compétences<span class="blue">.</span> </h2>
 
                     </div>
                     <div class="container aprop" id="skills">
 
-                        <h2> Infos. </h2>
+                        <h2> Infos<span class="blue">.</span> </h2>
 
                     </div>
 
