--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Bonjour, je m'appel Colin Beal et je créer des sites sur les internets depuis 2015."/>
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
-    <title>Site web de Colin BEAL</title>
+    <title>Colin BEAL | Développeur Web | Clermont-Ferrand</title>
 
     <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700|Montserrat:900|Domine:400,700" rel="stylesheet">
       <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 			<!-- Font awesome-->
 	<link href="css/font-awesome.min.css" rel="stylesheet">
-			<!-- Ma feuille de style-->
+			<!-- Ma feuille de style perso-->
 	<link href="css/style.css" rel="stylesheet">
 
 			  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 			  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	  <!-- Hotjar Tracking Code for http://colinbeal.github.io/ -->
+	  <!-- Hotjar Tracking Code -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -67,17 +68,12 @@
 
           </div>
         </div>
-                <div class="container main" id="accueil">
 
-                  <div class="container">
-
-                </div>
-        </div>
           <div class="container aprop">
 
               <div class="row">
                 <div class="col-md-3  ">
-            <img src="images/photo.png" alt="photo colin" class="img-responsive" >
+            <img src="images/photo.png" alt="photo colin developpeur web" class="img-responsive" >
                 </div>
                 <div class="col-md-9">
                   <div class="row">
@@ -109,7 +105,7 @@
                   <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
                 </div>
                 <div class="col-md-6">
-                  <img src="images/12.jpg" class="img-responsive">
+                  <img src="images/12.jpg" alt="colin beal wahou" class="img-responsive">
                 </div>
 
               </div>
@@ -120,10 +116,10 @@
                   <h3>Site web du 21ème congrès national d'apiculture</h3>
                   <hr/>
                   <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                  <a href="congres.html" class="projectlink">En savoir plus <span class="blue">.</span>  </a>
+                  <a href="http://www.congres-national-apiculture.com/" class="projectlink">En savoir plus <span class="blue">.</span>  </a>
                 </div>
                 <div class="col-md-6">
-                  <img src="images/4.jpg" class="img-responsive">
+                  <img src="images/4.jpg"  alt="colin beal apiculture" class="img-responsive">
                 </div>
 
               </div>
@@ -133,10 +129,10 @@
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
                   <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
-                  <a href="congres.html" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
+                  <a href="https://colinbeal.github.io/Puzzle/index.html" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
                 </div>
                 <div class="col-md-6">
-                  <img src="images/11.jpg" class="img-responsive">
+                  <img src="images/11.jpg" alt="colin beal puzzle" class="img-responsive">
                 </div>
 
               </div>
