remove puzzle link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
                   <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
-                  <a href="https://colinbeal.github.io/Puzzle/index.html" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
+                  <a href="https://colinbeal.github.io/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
                 </div>
                 <div class="col-md-6">
                   <img src="images/11.jpg" alt="colin beal puzzle" class="img-responsive">
