--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Colin BEAL | Développeur Web | Clermont-Ferrand</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700|Montserrat:900|Domine:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Domine:400,700" rel="stylesheet">
       <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 			<!-- Font awesome-->
@@ -47,7 +47,7 @@
 
 
 
-      <div class="bgd">
+
         <div class="row top navbar-fixed-top">
           <div class="container-fluid">
             <div class="col-md-1">
@@ -69,26 +69,27 @@
           </div>
         </div>
 
-          <div class="container aprop">
+          <div class="container-fluid  fullscreen hidden-sm hidden-xs">
 
               <div class="row">
-                <div class="col-md-3  ">
-            <img src="images/photo.png" alt="photo colin developpeur web" class="img-responsive" >
+                <div class="col-md-1">
                 </div>
-                <div class="col-md-9">
-                  <div class="row">
+                <div class="col-md-7">
 
-                    <br/>
-                  </div>
-  <br/>
               <p class="maintext5">
-                  Je m'appel <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015 . Je suis actuellement en stage chez Michelin.
+                  Je m'appel <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
                    <br/>
                    <br/>
                    Bonne visite<span class="blue">.</span>
               </p>
             </div>
+            <div class="discover">
 
+              <a href="#real"><i class="fa fa-arrow-down fa-2x"></i></a>
+            </div>
+          <!--  <div class="col-md-5 ">
+          <img src="images/photo.png" alt="photo colin developpeur web" class="img-responsive profil" >
+        </div> -->
             </div>
           </div>
           <div class="container aprop">
