--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 			<!-- Font awesome-->
-	<link href="css/font-awesome.min.css" rel="stylesheet">
+	     <link href="css/font-awesome.min.css" rel="stylesheet">
 			<!-- Ma feuille de style perso-->
 	<link href="css/style.css" rel="stylesheet">
 
@@ -76,38 +76,37 @@
                 </div>
                 <div class="col-md-7">
 
-              <p class="maintext5">
-                  Je m'appel <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
-                   <br/>
-                   <br/>
-                   Bonne visite<span class="blue">.</span>
-              </p>
-            </div>
-            <div class="discover">
-
-              <a href="#real"><i class="fa fa-arrow-down fa-2x"></i></a>
-            </div>
+                  <p class="maintext5">
+                      Je m'appelle <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
+                       <br/>
+                       <br/>
+                       Bonne visite<span class="blue">.</span>
+                  </p>
+                </div>
+                <div class="discover">
+                  <a href="#real"><i class="fa fa-arrow-down fa-2x"></i></a>
+                </div>
           <!--  <div class="col-md-5 ">
           <img src="images/photo.png" alt="photo colin developpeur web" class="img-responsive profil" >
         </div> -->
+              </div>
             </div>
-          </div>
-          <div class="container aprop">
-            <div class="row">
-              <h2 id="real" class="col-md-4">Réalisations<span class="blue">.</span> </h2>
-            </div>
+            <div class="container aprop">
+              <div class="row">
+                <h2 id="real" class="col-md-4">Réalisations<span class="blue">.</span> </h2>
+              </div>
               <div class="row real">
 
-                <div class="col-md-6">
-                  <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
-                  <h3>Wahou!</h3>
-                  <hr/>
-                  <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                  <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
-                </div>
-                <div class="col-md-6">
-                  <img src="images/12.jpg" alt="colin beal wahou" class="img-responsive">
-                </div>
+                  <div class="col-md-6">
+                    <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
+                    <h3>Wahou!</h3>
+                    <hr/>
+                    <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
+                    <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
+                  </div>
+                  <div class="col-md-6">
+                    <img src="images/12.jpg" alt="colin beal wahou" class="img-responsive">
+                  </div>
 
               </div>
 
@@ -135,12 +134,7 @@
                 <div class="col-md-6">
                   <img src="images/11.jpg" alt="colin beal puzzle" class="img-responsive">
                 </div>
-
               </div>
-
-
-
-
           </div>
                     <div class="container aprop" id="skills">
 
