--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 </div>
                 <div class="col-md-7">
 
-                  <p class="maintext5">
+                  <h1 class="maintext5">
                       Je m'appelle <span class="blue">Colin Beal</span> & je créer sur les internets depuis 2015. Je suis actuellement en stage chez Michelin.
                        <br/>
                        <br/>
                        Bonne visite<span class="blue">.</span>
-                  </p>
+                  </h1>
                 </div>
                 <div class="discover">
                   <a href="#real"><i class="fa fa-arrow-down fa-2x"></i></a>
@@ -96,30 +96,15 @@
                 <h2 id="real" class="col-md-4">Réalisations<span class="blue">.</span> </h2>
               </div>
               <div class="row real">
-
-                  <div class="col-md-6">
-                    <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
-                    <h3>Wahou!</h3>
-                    <hr/>
-                    <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
-                    <a href="https://colinbeal.github.io/Wahou/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
-                  </div>
-                  <div class="col-md-6">
-                    <img src="images/12.jpg" alt="colin beal wahou" class="img-responsive">
-                  </div>
-
-              </div>
-
-              <div class="row real">
                 <div class="col-md-6">
-                  <p class="date">Projet Tutoré | Juin 2016</p>
-                  <h3>Site web du 21ème congrès national d'apiculture</h3>
+                  <p class="date">Stage | En cours (04/17-06/17)</p>
+                  <h3>Portail de la Sécurité Informatique - Michelin</h3>
                   <hr/>
-                  <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
+                  <p>Je travail sur la création d'un portail de la sécurité informatique sur l'intranet de l'entreprise Michelin, ma démarche est de partir de l'utilisateur pour créer un portail qui réponde à ses attentes</p>
                   <a href="http://www.congres-national-apiculture.com/" class="projectlink">En savoir plus <span class="blue">.</span>  </a>
                 </div>
                 <div class="col-md-6">
-                  <img src="images/4.jpg"  alt="colin beal apiculture" class="img-responsive">
+                  <img src="images/portail.jpg"  alt="colin beal michelin" class="img-responsive">
                 </div>
 
               </div>
@@ -129,12 +114,41 @@
                   <h3>Application web pour le site des arts d'asie et d'afrique</h3>
                   <hr/>
                   <p>J'ai créer cette activitée pour le projet d'art de cette année, il était question de créer une installation qui pourrait s'insérer à l'exposition remue-méninges. </p>
-                  <a href="https://colinbeal.github.io/" class="projectlink">En savoir plus<span class="blue">.</span>   </a>
+                  <a href="https://colinbeal.github.io/" class="projectlink">Découvrir le site<span class="blue">.</span>   </a>
                 </div>
                 <div class="col-md-6">
                   <img src="images/11.jpg" alt="colin beal puzzle" class="img-responsive">
                 </div>
+
+
+              <div class="row real">
+                <div class="col-md-6">
+                  <p class="date">Projet Tutoré | Juin 2016</p>
+                  <h3>Site web du 21ème congrès national d'apiculture</h3>
+                  <hr/>
+                  <p>J'ai travaillé sur ce site web en fin de 1ère année de mon DUT pendant deux semaines en binome, le travail içi était de mettre en forme le theme wordpress et d'insérer des articles.</p>
+                  <a href="http://www.congres-national-apiculture.com/" class="projectlink">Découvrir le site <span class="blue">.</span>  </a>
+                </div>
+                <div class="col-md-6">
+                  <img src="images/4.jpg"  alt="colin beal apiculture" class="img-responsive">
+                </div>
+
               </div>
+            </div>
+            <div class="row real">
+
+                <div class="col-md-6">
+                  <p class="date">Projet Personnel | Octobre 2016- Aujourd'hui</p>
+                  <h3>Wahou!</h3>
+                  <hr/>
+                  <p>Ce site est un projet personnel, il ma permis de faire mes premiers essais en javascript,il est aujourd'hui un peu obsolète mais il devrait évoluer sous peu. </p>
+                  <a href="https://colinbeal.github.io/Wahou/" class="projectlink">Découvrir le site<span class="blue">.</span>   </a>
+                </div>
+                <div class="col-md-6">
+                  <img src="images/12.jpg" alt="colin beal wahou" class="img-responsive">
+                </div>
+
+            </div>
           </div>
                     <div class="container aprop" id="skills">
 
@@ -151,8 +165,6 @@
 
           </footer>
           <script src="js/jquery.js"></script>
-          <script src="js/owl.carousel.min.js"></script>
           <script src="js/bootstrap.min.js"></script>
-          <script src="js/monscript.js"></script>
       </body>
 </html>
